[package]
name = "dlcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Link to your local Rust crypto library
dlcplazacryptlib = { path = "../dlcplazacryptlib", default-features = false }

